Fix H1 font size in dark mode

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -38,8 +38,10 @@
 }
 
 /* Customized Post Title */
-html:not(.dark) .heti .post-title {
+.heti .post-title {
   --at-apply: 'mb-2 mt-0 text-8.5 font-bold lg:text-9';
+}
+html:not(.dark) .heti .post-title {
   color: #363737;
 }
 
